# snap

./: .clang-format  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NOTE_TO_SELF.txt  README.md  TODO.md  clipboard.txt  doc.md  scratchpad  vy.vim
.github/workflows/: test.yml
benchmark/: run-benchmarks.sh  run.py
benchmark/cpp/: benchmark.cpp  clock.hpp
benchmark/cpp/scripts/: computed-access.snp
benchmark/lua/: binary-trees.lua  fib-recurs.lua  fib.lua  method-call.lua  string-equals.lua
benchmark/python/: binary-trees.py  fib-recurs.py  fib.py  for.py  method-call.py  string-equals.py
benchmark/snap/: fib.snp
benchmark/vyse/: binary-trees.vy  fib-recurs.vy  fib.vy  for.vy  method-call.vy  string-equals.vy
cli/: main.cpp  main.vy
doc/: bytecode.md  manual.md
example/: 99bottles.snp  99bottles.vy  bf.vy  fibonacci.snp  linked-list.snp  tables.snp  tables.vy
examples/: 99bottles.vy  bf.vy
include/: ast.hpp  block.hpp  common.hpp  compiler.hpp  debug.hpp  forward.hpp  function.hpp  gc.hpp  libloader.hpp  loadlib.hpp  opcode.hpp  runtime.hpp  scanner.hpp  source.hpp  string.hpp  table.hpp  token.hpp  upvalue.hpp  userdata.hpp  value.hpp  vm.hpp  vm_stack.hpp  vy_list.hpp  x_opcode.hpp
include/std/: base.hpp  lib_util.hpp  vystrlib.hpp
include/std/primitives/: vy_list_proto.hpp  vy_number.hpp  vy_string.hpp
include/stdlib/: base.hpp  vy_list.hpp  vy_number.hpp  vy_string.hpp
include/util/: args.hpp  auxlib.hpp  lib_util.hpp  native_module.hpp
lang/include/snap/: ast.hpp  block.hpp  common.hpp  compiler.hpp  debug.hpp  forward.hpp  function.hpp  gc.hpp  opcode.hpp  parser.hpp  scanner.hpp  string.hpp  table.hpp  token.hpp  upvalue.hpp  value.hpp  vm.hpp
lang/include/snap/std/: base.hpp
lang/include/vyse/: block.hpp  common.hpp  compiler.hpp  debug.hpp  forward.hpp  function.hpp  gc.hpp  loadlib.hpp  opcode.hpp  opcodex  scanner.hpp  string.hpp  table.hpp  token.hpp  upvalue.hpp  util.hpp  value.hpp  vm.hpp  vm_stack.hpp  vy_list.hpp  x_opcode.hpp
lang/include/vyse/std/: base.hpp  lib_util.hpp  vy_strlib.hpp
lang/include/vyse/std/primitives/: vy_list_proto.hpp  vy_string.hpp
lang/include/vyse/util/: args.hpp  auxlib.hpp  native_module.hpp
lang/src/: .compiler.cpp.swp  ast_printer.cpp  block.cpp  compiler.cpp  debug.cpp  function.cpp  gc.cpp  gc.hpp  loadlib.cpp  parser.cpp  scanner.cpp  string.cpp  table.cpp  token.cpp  upvalue.cpp  value.cpp  vm.cpp  vy_list.cpp
lang/src/std/: base.cpp  lib_util.cpp  lib_util.hpp  vy_strlib.cpp  vymath.cpp  vystrlib.cpp
lang/src/std/primitives/: vy_list_proto.cpp  vy_number.cpp  vy_string.cpp
lang/src/stdlib/: base.cpp  base.hpp
lang/src/util/: native_module.cpp
src/: ast.cpp  block.cpp  block.hpp  common.hpp  compiler.cpp  debug.cpp  debug.hpp  function.cpp  gc.cpp  list.cpp  loadlib.cpp  main.cpp  main.snp  main.vy  memory.hpp  opcode.hpp  parser.cpp  scanner.cpp  scanner.hpp  source.cpp  str_format.hpp  string.cpp  table.cpp  token.cpp  token.hpp  upvalue.cpp  value.cpp  value.hpp  vm.cpp  vy_list.cpp
src/compiler/: compiler.cpp  compiler.hpp
src/parser/: parser.cpp  parser.hpp
src/parser/ast/: ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp
src/runtime/: gc.cpp  libloader.cpp  loadlib.cpp  vm.cpp
src/std/: base.cpp  lib_util.cpp  vymath.cpp  vystrlib.cpp
src/std/primitives/: vy_list_proto.cpp  vy_number.cpp  vy_string.cpp
src/stdlib/: base.cpp  vy_list.cpp  vy_number.cpp  vy_string.cpp  vymath.cpp
src/syntax/: block.cpp  compiler.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
src/syntax/ast/: ast.hpp  ast_printer.cpp  ast_printer.hpp
src/typecheck/: type.cpp  type.hpp  typechecker.cpp  typechecker.hpp
src/util/: lib_util.cpp  native_module.cpp
src/vm/: vm.cpp  vm.hpp
test/: assert.hpp  auto-tests.cpp  compiler-test.cpp  compiler_test.cpp  expr.snap  gc-test.cpp  parser_test.cpp  scanner_test.cpp  stdlib-test.cpp  table-test.cpp  table_test.cpp  test.cpp  test_utils.cpp  test_utils.hpp  vm-test.cpp  vm_test.cpp
test/test_programs/: call.vy  continue.snp  gc-closure.snp  gc-strcat.vy  inherit.snp  keys.snp  llnode-cl.snp  loop-for.snp  method-1.snp  nested-while.snp  nested-while.vy  self.snp  string-concat.snp  table-2.snp  table-3.snp  table-4.snp  table-5.snp  table-6.snp  table-7.snp  table-8.snp  table-9.snp  var.snp  while-break-nest.snp
test/test_programs/auto/: arrowfn.vy  call.vy  import.vy  list-proto.vy  list.vy  math.vy  overload.vy  proto.vy  random.vy  str.vy  strcat.vy  varargs.vy
test/test_programs/closures/: adder-2.vy  adder.vy  call.vy  fib-rec.vy  gc-closure.vy  llnode-cl.vy  nested-closures.vy
test/test_programs/expr/: compound-assign.vy  concat.vy  len-str.vy  len.vy
test/test_programs/if/: else-if.vy
test/test_programs/loop/for/: break.vy  continue.vy  for-rev-1.vy
test/test_programs/statements/: global.vy
test/test_programs/stdlib/: substr.vy
test/test_programs/tables/: link-list.vy  method-2.vy  suffix-expr.vy
test/util/: test_utils.cpp  test_utils.hpp
tests/: assert.hpp  auto-tests.cpp  compiler-test.cpp  gc-test.cpp  scanner-test.cpp  stdlib-test.cpp  table-test.cpp  udata-test.cpp  vm-test.cpp
tests/import-tests/: a.vy  b.vy
tests/test_programs/auto/: arrowfn.vy  call.vy  import-vy.vy  import.vy  list-proto.vy  overload.vy  reduce.vy  str.vy
tests/test_programs/closures/: adder.vy
tests/test_programs/error/: expr.vy
tests/test_programs/if/: if.vy
tests/test_programs/loop/: fib-loop.vy  while-break.vy  while-loop.vy
tests/test_programs/loop/for/: for-mut-counter.vy  for-rev.vy  in-closure.vy  loop-for.vy  loop-locvar.vy  loop-step.vy  nest.vy
tests/test_programs/random/: bkdr-hash.vy
tests/test_programs/statements/: locals.vy  var.vy
tests/test_programs/stdlib/: map-str.vy
tests/test_programs/strings/: string.vy
tests/test_programs/tables/: inherit.vy  point.vy  self.vy  table-1.vy  table-7.vy  table-9.vy
tests/util/: test_utils.cpp  test_utils.hpp
